--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        My webpage
-    </head>
+    <head>Gabriel Chong</head>
     <body>
-
+        <header>Hi,</header>
+        <nav>
+            <ul>
+                <li><a href="#"> 1 </a></li>
+                <li><a href="#"> 2 </a></li>
+                <li><a href="#"> 3 </a></li>
+                <li><a href="#"> 4 </a></li>
+            </ul>
+        </nav>
     </body>
 </html>
