Thu, Mar 16, 2023, 12:57 PM +08:00

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <body>
-        <header>Hi,</header>
+        <header>Insert Title here</header>
         <nav>
             <ul>
                 <li><a href="/"> 1 </a></li>
