--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
         <header>Insert Title here</header>
         <nav>
             <ul>
-                <li><a href="/"> 1 </a></li>
-                <li><a href="#"> 2 </a></li>
-                <li><a href="#"> 3 </a></li>
-                <li><a href="#"> 4 </a></li>
+                <li><a href="/home"> Homepage </a></li>
+                <li><a href="/projects"> Projects </a></li>
+                <li><a href="/education"> Education </a></li>
+                <li><a href="/about"> About </a></li>
+                <li><a href="/resume"> Resume </a></li>
             </ul>
         </nav>
     </body>
