Thu, Mar 16, 2023, 4:55 PM +08:00

--- a/layout.html
+++ b/layout.html
@@ -17,9 +17,9 @@
       </ul>
     </nav>
   </header>
-  <p1>
-      
-  </p1>
+  <h1>Projects</h1>
+  <p>To be added...</p>
+  
   <main>
   </main>
   <footer>
