--- a/index.html
+++ b/index.html
@@ -1,8 +1,47 @@
-{% extends 'layout.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+  <title>{% block title %}My Site{% endblock %}</title>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/projects"> Projects </a></li>
+        <li><a href="/education"> Education </a></li>
+        <li><a href="/about"> About </a></li>
+        <a href="https://github.com/GabrielC15.github.io/temp.pdf" target="_blank">Resume</a>
+      </ul>
+    </nav>
+  </header>
 
-{% block title %}Home{% endblock %}
+  <h1>Projects</h1>
+  <p>To be added...</p>
 
-{% block content %}
-<h1>Welcome to my site!</h1>
-<p>This is the home page.</p>
-{% endblock %}
+  <h2>Education</h2>
+  <ul>
+  <li>Completed 2022 Senior High School education at Sabah Tshung Tsin Secondary School, Sabah, Malaysia</li>
+  <li>Completed 2023 CS50x and CS50P courses from HarvardX, Harvard University</li>
+  <li>Completed 2022 ABRSM Performance Diploma in Violin</li>
+  </ul>
+
+  <h2>Skills</h2>
+  <ul>
+  <li>Proficient in programming languages including Java, Python, and C</li>
+  <li>Strong problem-solving skills and ability to work in a team</li>
+  <li>Excellent communication skills</li>
+  <li>Detail-oriented with the ability to manage multiple tasks simultaneously</li>
+  <li>Highly adaptable and flexible with the ability to learn new skills quickly</li>
+  <li>Experienced in performing with an orchestra and participating in multiple camps and performances</li>
+  </ul>
+  
+  <main>
+  </main>
+  <footer>
+    &copy; My Site 2023
+  </footer>
+</body>
+</html>
