Thu, Mar 16, 2023, 5:00 PM +08:00

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     </nav>
   </header>
   <main>
+    <h1>Welcome to my site!</h1>
+    <p>This is the home page.</p>
 
-    <h1>Projects</h1>
+    <h2>Projects</h2>
     <p>To be added...</p>
 
     <h2>Education</h2>
