--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <nav>
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/projects"> Projects </a></li>
-        <li><a href="/education"> Education </a></li>
-        <li><a href="/about"> About </a></li>
+        <li><a href="/#">About</a></li>
+        <li><a href="/#"> Projects </a></li>
+        <li><a href="/#"> Education </a></li>
+        <li><a href="/#"> About </a></li>
         <a href="https://github.com/GabrielC15.github.io/temp.pdf" target="_blank">Resume</a>
       </ul>
     </nav>
