Thu, Mar 16, 2023, 5:39 PM +08:00

--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -85,21 +85,21 @@
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul>
                         <li>C</li>
-                        
+                        <li>Python</li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Soft skills</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Strong problem-solving skills and ability to work in a team
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            Excellent communication skills
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Detail-oriented with the ability to manage multiple tasks simultaneously
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
