Thu, Mar 16, 2023, 5:41 PM +08:00

--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -103,7 +103,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Highly adaptable and flexible with the ability to learn new skills quickly
                         </li>
                     </ul>
                 </div>
