Thu, Mar 16, 2023, 5:47 PM +08:00

--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -114,7 +114,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors.</p>
-                    <p class="mb-0">Other than that, I am an amateur classical violinist and pianist, as well as a .</p>
+                    <p class="mb-0">Aside from that, I am an amateur classical violinist and pianist, as well as an avid classical music listener.</p>
                 </div>
             </section>
             <hr class="m-0" />
