--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a href="https://github.com/GabrielC15.github.io/temp.pdf" target="_blank">Resume</a></li>
                 </ul>
             </div>
         </nav>
